--- a/index.html
+++ b/index.html
@@ -4,5 +4,80 @@
 <link rel="stylesheet" href="style.css">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-  <head>
-    <meta charset="utf-8"> 
+<body>
+<html>
+    <meta charset="utf-8">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+      <div class="container-fluid">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="page2.html">Beginner Code</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="page3.html">Why join?</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+<h1> FRHSD'S Web Design Program </h1>
+
+
+
+<h2>
+
+  <p>
+    At FRHSD you will learn a lot about yourself.
+    There are many differnt ways to explore your interests
+    and what you want to do in the future. Knowing your
+    computers or technology as a whole is extremely important
+    thats why one program I truly can recommend is Web Design.
+  </p>
+
+<div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+  </div>
+
+  <div class="carousel-inner">
+ <div class="carousel-item active">
+   <img src="img\3191.png" alt="Los Angeles" class="img-fluid" style="width:50%">
+ </div>
+ <div class="carousel-item">
+   <img src="img\download.png" alt="Chicago" class="img-fluid" style="width:35%">
+ </div>
+ <div class="carousel-item">
+   <img src="img\a36800e2-1cfa-4952-bd02-6de5a71f13ab-uscp-75xutm6i1zol7r3dgfz_original.jpg" alt="New York" class="img-fluid" style="width:50%">
+ </div>
+</div>
+
+
+
+<button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </button>
+</div>
+
+</h2>
+
+
+
+<footer>
+
+ <span class="badge rounded-pill bg-dark">email: pinapple@frhsd.com</span>
+ <span class="badge rounded-pill bg-info">Freehold Township Highschool</span>
+<span class="badge rounded-pill bg-secondary">For Grades 10-12</span>
+
+
+</footer>
+</body>
+</html>
