--- a/page2.html
+++ b/page2.html
@@ -4,5 +4,39 @@
 <link rel="stylesheet" href="style.css">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-  <head>
+
     <meta charset="utf-8">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+      <div class="container-fluid">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="page2.html">Beginner Code</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="page3.html">Why join?</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <html>
+    <body>
+
+<h1> 
+
+HTML and CSS
+
+</h1>
+
+
+
+
+
+
+
+
+      </html>
+    </body>
