--- a/index.html
+++ b/index.html
@@ -27,7 +27,67 @@
 
 
 
-<h2>
+  <div class="row">
+    <div class="col-xl-6"></div>
+    <div class="col-xl-6">
+
+      <div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+          <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+          <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+        </div>
+
+      <div class="carousel-inner">
+     <div class="carousel-item active">
+       <img src="img\3191.png" alt="Los Angeles" class="img-fluid" style="width:50%">
+     </div>
+     <div class="carousel-item">
+       <img src="img\download.png" alt="Chicago" class="img-fluid" style="width:35%">
+     </div>
+     <div class="carousel-item">
+       <img src="img\a36800e2-1cfa-4952-bd02-6de5a71f13ab-uscp-75xutm6i1zol7r3dgfz_original.jpg" alt="New York" class="img-fluid" style="width:50%">
+     </div>
+    </div>
+
+    <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </button>
+    </div>
+<div class="col-xl-3"></div>
+      </div>
+
+
+  <div class="mt-4 p-5 bg-dark text-white rounded">
+
+    <div class="alert alert-primary alert-dismissible fade show">
+    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+    <strong>This website contains critical information on
+    Freehold Township Highschools Web Design Program! </strong>
+  </div>
+
+  <p> Leave your Email below if interested..... </p>
+
+  <form action="/action_page.php">
+      <div class="mb-3 mt-3">
+        <label for="email">Email:</label>
+        <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+      </div>
+
+      <div class="form-check mb-3">
+      <label class="form-check-label">
+        <input class="form-check-input" type="checkbox" name="remember"> Remember me
+      </label>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
+
+</div>
 
   <p>
     At FRHSD you will learn a lot about yourself.
@@ -37,37 +97,6 @@
     thats why one program I truly can recommend is Web Design.
   </p>
 
-<div id="demo" class="carousel slide" data-bs-ride="carousel">
-
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-    <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-  </div>
-
-  <div class="carousel-inner">
- <div class="carousel-item active">
-   <img src="img\3191.png" alt="Los Angeles" class="img-fluid" style="width:50%">
- </div>
- <div class="carousel-item">
-   <img src="img\download.png" alt="Chicago" class="img-fluid" style="width:35%">
- </div>
- <div class="carousel-item">
-   <img src="img\a36800e2-1cfa-4952-bd02-6de5a71f13ab-uscp-75xutm6i1zol7r3dgfz_original.jpg" alt="New York" class="img-fluid" style="width:50%">
- </div>
-</div>
-
-
-
-<button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon"></span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-    <span class="carousel-control-next-icon"></span>
-  </button>
-</div>
-
-</h2>
 
 
 
