--- a/page2.html
+++ b/page2.html
@@ -4,7 +4,8 @@
 <link rel="stylesheet" href="style.css">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<html>
+<body>
     <meta charset="utf-8">
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
       <div class="container-fluid">
@@ -22,17 +23,28 @@
       </div>
     </nav>
 
-    <html>
-    <body>
 
-<h1> 
+
+<h1>
 
 HTML and CSS
 
 </h1>
 
+ <h2>
 
+   <div class="row">
+  <div class="col-lg-3">Html:
 
+    Html is and example of basic starter "code"
+    you will learn during your first year. 
+
+  </div>
+  <div class="col-lg-6">2</div>
+  <div class="col-lg-3">3</div>
+</div>
+
+</h2>
 
 
 
