--- a/page3.html
+++ b/page3.html
@@ -5,6 +5,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<body>
+  <html>
     <meta charset="utf-8">
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
       <div class="container-fluid">
@@ -20,4 +22,9 @@
           </li>
         </ul>
       </div>
-    </nav> 
+    </nav>
+
+<h1> Why should you join the Web Design Program? </h1> 
+
+</body>
+</html>
