--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           </li>
         </ul>
       </div>
+      <img src="img\images.jfif" alt="compmouse" width="20" height="30">
     </nav>
 
 <h1> FRHSD'S Web Design Program </h1>
