--- a/page2.html
+++ b/page2.html
@@ -21,6 +21,7 @@
           </li>
         </ul>
       </div>
+      <img src="img\images.jfif" alt="compmouse" width="20" height="30">
     </nav>
 
 
@@ -34,21 +35,74 @@ HTML and CSS
  <h2>
 
    <div class="row">
-  <div class="col-lg-3">Html:
+  <div class="col-lg-3">
 
     Html is and example of basic starter "code"
-    you will learn during your first year. 
+    you will learn during your first year.
 
   </div>
-  <div class="col-lg-6">2</div>
-  <div class="col-lg-3">3</div>
+  <div class="col-lg-6">
+<img src="0_aVQR9kZAltUzmu8e.jfif" alt="coding img" class="coding" width="500" height="400">
+<img src="download.png" alt="hc" class="hc" width="400" height="300">
+  </div>
+  <div class="col-lg-3">
+
+   CSS is another type of basic code you will
+   learn during your first year of the Web
+   Design program except you will use this to add
+   color or any other type of styling you want.
+
+
+  </div>
 </div>
 
 </h2>
 
+<h3>
+
+  <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#myModal">
+    More Info
+  </button>
+</div>
 
 
+<div class="modal" id="myModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
 
 
+      <div class="modal-header">
+        <h4 class="modal-title">More Info</h4>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+
+
+      <div class="modal-body">
+        Knowing about these two topics can actually
+        help you create things you never thought you'd
+        be able too. Such as video games, business websites,
+        and animated videos...etc.
+      </div>
+
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+</h3>
+
+
+<footer>
+
+ <span class="badge rounded-pill bg-dark">email: pinapple@frhsd.com</span>
+ <span class="badge rounded-pill bg-info">Freehold Township Highschool</span>
+<span class="badge rounded-pill bg-secondary">For Grades 10-12</span>
+
+
+</footer>
       </html>
     </body>
