--- a/page3.html
+++ b/page3.html
@@ -22,9 +22,68 @@
           </li>
         </ul>
       </div>
+      <img src="img\images.jfif" alt="compmouse" width="20" height="30">
     </nav>
 
-<h1> Why should you join the Web Design Program? </h1> 
+<h1> Why should you join the Web Design Program? </h1>
 
+<div id="accordion">
+   <div class="card">
+     <div class="card-header">
+       <a class="btn" data-bs-toggle="collapse" href="#collapseOne">
+         Reason 1...
+       </a>
+     </div>
+     <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
+       <div class="card-body">
+         A lot of Highschool students want to make
+         money but don't want to work at jobs they
+         won't actually enjoy doing. If you use to
+         many skills you will learn durig this Program
+         you can create your own business at a young age.
+         You can make websites, or animations, or your
+         own games depending on how much your willing to
+         apply yourself to achieve what you want.
+       </div>
+     </div>
+   </div>
+   <div class="card">
+     <div class="card-header">
+       <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseTwo">
+       Reason 2...
+     </a>
+     </div>
+     <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
+       <div class="card-body">
+         Its geniue
+       </div>
+     </div>
+   </div>
+   <div class="card">
+     <div class="card-header">
+       <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">
+         Reason 3...
+       </a>
+     </div>
+     <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
+       <div class="card-body">
+         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+       </div>
+     </div>
+   </div>
+ </div>
+</div>
+
+
+
+
+<footer>
+
+ <span class="badge rounded-pill bg-dark">email: pinapple@frhsd.com</span>
+ <span class="badge rounded-pill bg-info">Freehold Township Highschool</span>
+<span class="badge rounded-pill bg-secondary">For Grades 10-12</span>
+
+
+</footer>
 </body>
 </html>
