everything except offcanvas

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 <footer>
 
  <span class="badge rounded-pill bg-dark">email: pinapple@frhsd.com</span>
- <span class="badge rounded-pill bg-info">Freehold Township Highschool</span>
-<span class="badge rounded-pill bg-secondary">For Grades 10-12</span>
+ <span class="badge rounded-pill bg-dark">Freehold Township Highschool</span>
+<span class="badge rounded-pill bg-dark">For Grades 10-12</span>
 
 
 </footer>
