--- a/page3.html
+++ b/page3.html
@@ -55,7 +55,11 @@
      </div>
      <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
        <div class="card-body">
-         Its geniue
+         Its genuinely a fun class. It's not one of
+         your typical classes you stress about everday
+         to keep a god grade in. If you just do the
+         work you'll literally end each marking
+         period with a A+.
        </div>
      </div>
    </div>
@@ -67,21 +71,25 @@
      </div>
      <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
        <div class="card-body">
-         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+         After being in the year 1 course for like a month
+         maybe even less your typing speeds will increase
+         significantly. Also you'll start typing without looking
+         at the keyboard without even realizing it. It
+         will become muscle memory.
        </div>
      </div>
    </div>
  </div>
 </div>
 
-
+<img src="img\what-is-coding-1024x683.jpg" alt="code" class="codeimg" width="500" height="450">
 
 
 <footer>
 
  <span class="badge rounded-pill bg-dark">email: pinapple@frhsd.com</span>
- <span class="badge rounded-pill bg-info">Freehold Township Highschool</span>
-<span class="badge rounded-pill bg-secondary">For Grades 10-12</span>
+ <span class="badge rounded-pill bg-dark">Freehold Township Highschool</span>
+<span class="badge rounded-pill bg-dark">For Grades 10-12</span>
 
 
 </footer>
