final touches (off canvas)

--- a/page3.html
+++ b/page3.html
@@ -57,7 +57,7 @@
        <div class="card-body">
          Its genuinely a fun class. It's not one of
          your typical classes you stress about everday
-         to keep a god grade in. If you just do the
+         to keep a god grade in. If you just do theS
          work you'll literally end each marking
          period with a A+.
        </div>
@@ -83,6 +83,31 @@
 </div>
 
 <img src="img\what-is-coding-1024x683.jpg" alt="code" class="codeimg" width="500" height="450">
+
+<div class="offcanvas offcanvas-bottom" id="demo">
+  <div class="offcanvas-header">
+    <h1 class="offcanvas-title">What you can do to actually join...</h1>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
+  </div>
+  <div class="offcanvas-body">
+    <p>You can email you guidance counselour first off and ask them about it.
+    Also some time during the second semester of the school year
+  maybe even the third there will be a interest seassion
+meeting for freshman make sure you look out for that
+because that is where you will find all the information
+you need and you can ask the teachers apart of the
+program.  </p>
+
+  </div>
+</div>
+
+<div class="container-fluid mt-3">
+
+
+  <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo">
+    Click me...
+  </button>
+</div>
 
 
 <footer>
